fixed indicators z-index

--- a/tiny-carousel.css
+++ b/tiny-carousel.css
@@ -22,6 +22,7 @@
   bottom: 0;
   margin-left: -60px;
   margin-bottom: 8px;
+  z-index: 2;
 }
 .tiny-carousel .indicators li {
   width: 4px;
